[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ms2lipid"
version = "0.1.4"
authors = [
  { name="Nami Sakamoto", email="s248856t@st.go.tuat.ac.jp" },
  { name="Takaki Oka", email="s237226y@st.go.tuat.ac.jp" },
  { name="Kozo Nishida", email="kozo.nishida@gmail.com" },
]
description = "ms2lipid is a Python library for predicted lipid class by using ms2 spectrum."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas==2.0.3",
  "tensorflow",
  "keras",
  "zenodo-get",
]

[project.urls]
Homepage = "https://github.com/systemsomicslab/ms2lipid"
Issues = "https://github.com/systemsomicslab/ms2lipid/issues"
