[tool.poetry]
name = "ms2lipid"
version = "0.1.5"
description = "ms2lipid is a Python library for predicted lipid class by using ms2 spectrum."
license = 'MIT'
authors = ["NamiSakamoto <123930464+NamiSakamoto@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/systemsomicslab/ms2lipid"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.26.4"
pandas = "^2.1.2"
tensorflow = "==2.15.0"
keras = "==2.15.0"
zenodo-get = "^1.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Issues = "https://github.com/systemsomicslab/ms2lipid/issues"